fix(nginx): 容器网络互通
解决 web 请求 server 的网络问题

--- a/env/nginx/conf/default.conf
+++ b/env/nginx/conf/default.conf
@@ -15,7 +15,7 @@ server {
     # 端口代理转发
     location /api/ {
         rewrite  /api/(.*)  /$1  break;
-        proxy_pass http://localhost:7001;
+        proxy_pass http://server:7001/;
     }
 
     #error_page  404              /404.html;
