--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: docker-deploy_web_image # 指定构建出来的镜像名
     container_name: docker-deploy_web_v1
     ports:
-      - "7000:80"
+      - "7000:80" # 当以 主机:容器 的形式来映射端口时，如果使容器的端口小于60，那可能会出现错误，因为YAML会将 xx:yy这样格式的数据解析为六十进制的数据，基于这个原因，时刻记得要将端口映射明确指定为字符串
     volumes:
       - ./env/nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
       # - ./web/dist:/usr/share/nginx/html/dist # 开启将使在容器打包生成的内容被覆盖,建议在开发环境下开启 开启后修改 web 后运行 pnpm build 就可以直接看到更新内容
@@ -17,7 +17,7 @@ services:
     image: docker-deploy_server_image
     container_name: docker-deploy_server_v1 # 容器名称
     ports:
-      - 7001:7001 # 宿主主机端口号:容器端口号
+      - "7001:7001" # 宿主主机端口号:容器端口号
     depends_on: # docker-deploy 服务依赖的其他服务，按照指定的顺序先启动依赖的服务，再启动后端项目服务
       # - postgres
       - mysql
@@ -28,7 +28,7 @@ services:
     image: mysql:5.7
     container_name: docker-deploy_mysql_v1
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - /docker-deploy/env/mysql/data:/data # 挂载 mysql 存储数据目录到容器中，持久化数据库数据，避免因容器停止导致数据丢失的情况
     environment:
@@ -39,7 +39,7 @@ services:
     image: redis:latest # redis镜像
     container_name: docker-deploy_redis_v1 # redis镜像的容器名称
     ports:
-      - 6379:6379 # 主机端口：容器端口的映射，后台项目服务中配置文件中为 redis 配置的端口，要为主机端口
+      - "6379:6379" # 主机端口：容器端口的映射，后台项目服务中配置文件中为 redis 配置的端口，要为主机端口
     volumes:
       - /docker-deploy/env/redis/data:/data # 挂载 Redis 存储数据目录到容器中，持久化数据库数据，避免因容器停止导致数据丢失的情况
     command: "redis-server --appendonly yes" # 此命令用来覆盖容器默认命令
@@ -48,7 +48,7 @@ services:
     image: postgres:latest
     container_name: docker-deploy_postgres_v1
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - /docker-deploy/env/psotgres/data:/data/db # 挂载postgres数据目录到容器中，持久化数据库数据
     environment: # 配置postgres的环境变量
@@ -70,8 +70,7 @@ services:
 # 运行指令
 # docker-compose up -d
 
-# 修改 docker-compose.yml 运行
-# docker-compose down
+# 修改 docker-compose.yml 后,更新运行
 # docker-compose up -d
 
 # 修改源文件运行
